2024-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp.el (tramp-unknown-id-string, tramp-unknown-id-integer):
	Make it a defvar.
	(with-tramp-timeout): Adapt docstring.

2023-12-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.0 released.

2023-12-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-pipe-stty-settings): New defcustom.
	(tramp-sh-handle-make-process): Use it.  (Bug#62093)

2023-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	Use `tramp-remote-path' for setting PATH environment.

	* tramp-sh.el (tramp-get-remote-pipe-buf): New defun.
	(tramp-set-remote-path): Use it.
	(tramp-get-remote-path): Add ;;;###tramp-autoload cookie.

2023-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-connection-local-p): Make it
	compatible with Emacs 27.

2023-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-connection-local-p): New macro.

	* tramp-crypt.el (tramp-crypt-cleanup-connection):
	Bind `tramp-crypt-enabled'.

2023-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-directory-files)
	(tramp-skeleton-make-symbolic-link):
	* tramp-cache.el (with-tramp-saved-file-property)
	(with-tramp-saved-file-properties)
	(with-tramp-saved-connection-property)
	(with-tramp-saved-connection-properties): Use `setf' but `setq' in macro.

	* tramp-compat.el (tramp-compat-funcall): Declare debug.

	* tramp-crypt.el (tramp-crypt-file-name-p): Exclude lock files.
	(tramp-crypt-file-name-handler-alist): Use `identity' for
	`abbreviate-file-name'.
	(tramp-crypt-add-directory, tramp-crypt-remove-directory):
	Adapt docstrings.
	(tramp-crypt-cleanup-connection): New defun.  Add it to
	`tramp-cleanup-connection-hook'

	* tramp-sh.el (tramp-sh-extra-args): Extend regexp.

2023-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-regexp): Extend.