@@ -1,3 +1,8 @@
+2024-01-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-bundle-read-file-names): Check, that the
+	command finishes successfully.
+
 2024-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* tramp.el (tramp-unknown-id-string, tramp-unknown-id-integer):
